	without proper modifications, which resulted in usage of namespaces
	which were not defined. This is fixed now.

	* The input XML documents sent to central register for archivation
	are encoded in UTF-8. The old behaviour of sending the raw text
	could result in db insert failure, if the input was encoded in other
	than UTF-8 encoding.

	* Changes in XML schemas - see schemas' changelog for more detailed
	information.

version 1.4.0

	* Configuration utilities (apr-config, apxs, pkg-config) are run
	as part of configure rather than in makefile. Makefile gets real
	parameters and not just paths of these utilities. I belive it's
	more correct solution.

	* Missing tests for header files as well as errors in 'with' parameters
	in configure.ac were corrected.

	* mod_eppd creates "dummy answer" if it cannot get response from
	some reason from CORBA server. Dummy answer looks like normal error
	response, but the svtrid is faked. If the error occures during
	the first greeting, the mod_eppd closes the connection without
	responding with error message, which is the same behaviour as before.

	* Again changes in XML schemas, see schemas' changelog for more
	information. Schemas versions were bumped up.

version 1.3.1

	* New 'tempcontact' element in domain, new technical check interface
	... see changelog of XML schemas.

version 1.3.0

	* The client provided values which caused errors repeated in error
	message are now taken directly from input document, rather than
	constructed ad-hoc as it was before. At source code level this implies
	that parsed document and its context must be attached to command
	structure and is freed after the whole request is proccessed.

	* New CORBA backend which exploits better possibility of exceptions
	is in place. The return codes are no more overloaded.

	* Functions for logging were exported in other components of mod_eppd.
	This results in better error reporting in log file, which was not