@@ -1,4 +1,4 @@
-2006-06-26 Jan Kryl (version 1.5.0)
+2006-06-26 Jan Kryl (version 1.4.1)
 
 	* New status flags for domain object were added (serverBlocked,
 	serverOutzoneManual, serverInzoneManual, expired, outzone,
